<resources>
    <string name="app_name">Dispositivos_moviles_proyecto_gc_es1</string>
    <string name="saludo">¡Hola! Es bieno verte nuevamente</string>
    <string name="pepe">Cancelar</string>
    <string name="palabra1">Fast and delicious food</string>
    <string name="app_binding_name">Servicios a ofrecer</string>
    <string name="title_activity_main_binding">ActivityMainBinding</string>
    <string name="app_name_pantalla">Fast and Delicious Food</string>
    <string name="app_name_pantalla2">Tus servicios online</string>
    <string name="correo">Correo</string>
    <string name="contraseña">Contraseña</string>
    <string name="redes_sociales">O conéctese usando lasa redes sóciales</string>
    <string name="menu_home">Home</string>
    <string name="menu_favs">Busqueda</string>
    <string name="menu_sear">Search</string>
    <string name="menu_chatgpt">ChatGPT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="deadpool">https://comicvine.gamespot.com/a/uploads/scale_small/12/124259/8926324-large-2680196.jpg</string>
    <string name="elektra">https://comicvine.gamespot.com/a/uploads/scale_small/12/124259/8324004-daredevil_woman_without_fear_vol_1_1_unknown_comic_books_exclusive_virgin_variant.jpg
</string>
    <string name="daredevil">https://comicvine.gamespot.com/a/uploads/scale_small/11118/111187046/7397359-0398898002-EQH1ysWWsAA7QLf</string>
    <string name="spiderman">https://comicvine.gamespot.com/a/uploads/scale_small/12/124259/8126579-amazing_spider-man_vol_5_54_stormbreakers_variant_textless.jpg</string>
    <string name="gambit">https://comicvine.gamespot.com/a/uploads/scale_small/11126/111269625/7324346-excalibur%20variant.jpg</string>

    <string name="facebook_app_id">313786661057966</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">8b0d7c8788977fee91859b9d444cce73</string>

</resources>