<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/inicio"
        android:title="@string/menu_home"
        android:icon="@drawable/house_48px"
        android:enabled="true"
        android:visible="true"


        />
    <item
        android:id="@+id/search"
        android:title="@string/menu_sear"
        android:icon="@drawable/search"
        android:enabled="true"
        android:visible="true"
        />

    <item
        android:id="@+id/favorito"
        android:title="@string/menu_favs"
        android:icon="@drawable/favorite_48px"
        android:enabled="true"
        android:visible="true"

        />

    <item
        android:id="@+id/chat"
        android:title="@string/menu_chatgpt"
        android:icon="@drawable/robot_2_48px"
        android:enabled="true"
        android:visible="true"
        />

</menu>