<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.MainActivity">


    <Button
        android:id="@+id/btn_recuperar_contra"
        style="@style/ButtonRecuContra"
        android:layout_width="208dp"
        android:layout_height="36dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="40dp"
        android:text="¿Olvidó su contraseña?"
        android:textSize="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txt_user"
        android:layout_width="221dp"
        android:layout_height="46dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="336dp"
        android:backgroundTint="@color/black"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/low_gray"
        android:textSize="16sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/saludo2"
        style="@style/saludo"
        android:layout_width="227dp"
        android:layout_height="30dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="284dp"
        android:gravity="left"
        android:text="@string/saludo"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/etiqueta_contraseña"
        style="@style/login"
        android:layout_width="75dp"
        android:layout_height="20dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="64dp"
        android:gravity="left"
        android:text="@string/contraseña"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etiqueta_correo" />

    <Button
        android:id="@+id/btn_login"
        style="@style/ButtonCancel"
        android:layout_width="221dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="484dp"
        android:text="Ingresar"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_twitter"
        style="@style/ButtonTwitter"
        android:layout_width="124dp"
        android:layout_height="49dp"
        android:layout_marginStart="76dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="88dp"
        android:text="Gmail"
        android:textSize="17dp"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/gugol"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_facebook"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_facebook"
        style="@style/ButtonFacebook"
        android:layout_width="124dp"
        android:layout_height="49dp"
        android:layout_marginStart="216dp"
        android:layout_marginBottom="88dp"
        android:text="Facebook"
        android:textSize="12dp"
        android:textColor="@color/white"
        android:drawableLeft="@drawable/facebook_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/social"
        style="@style/saludo"
        android:layout_width="256dp"
        android:layout_height="28dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="552dp"
        android:background="@color/white"
        android:gravity="left"
        android:text="@string/redes_sociales"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/textTitle"
        android:layout_width="211dp"
        android:layout_height="30dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="240dp"
        android:gravity="left"
        android:text="@string/app_name_pantalla2"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/etiqueta_correo"
        style="@style/login"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="316dp"
        android:gravity="left"
        android:text="@string/correo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_password"

        android:layout_width="221dp"
        android:layout_height="46dp"

        android:layout_marginStart="88dp"

        android:layout_marginTop="424dp"
        android:backgroundTint="@color/plomo"

        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/low_gray"
        android:inputType="textPassword"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_registro"
        style="@style/Registrese"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="36dp"
        android:text="Registrese"
        android:textSize="13dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_recuperar_contra"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_marginTop="35dp"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginBottom="38dp"
        android:src="@drawable/herramientas_movs"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>